# DSaA_Labs

./: README.md
kursovaya/: Cargo.toml  kus.docx
kursovaya/src/: main.rs  matrix_sort.rs  max_num.rs  triangle_with_perimeter.rs
lab_1/: Cargo.toml  laba1.docx
lab_1/src/: main.rs  n1.rs  n2.rs  n3.rs  rng.rs
lab_2/: Cargo.toml  laba2.docx
lab_2/src/: chess.rs  main.rs  myhashmap.rs  n1search.rs
lab_3/: Cargo.toml  fifteen_output.txt  laba3.docx
lab_3/src/: find.rs  main.rs  play15.rs  play15old.rs  play15old2.rs
lab_4/: Cargo.toml  laba4.docx
lab_4/src/: main.rs
