[package]
name = "lab_3"
version = "0.1.0"
authors = ["Vladislav Podporkin <vavus44375@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
ndarray = "0.15.1"
text_io = "0.1.8"
fxhash = "0.2.1"

serde = "^1.0"
ron = "0.6.4"
